Changelog
=========

Changes from cgkit-2.0.0alpha9 to cgkit-2.0.0alpha10:

New features:

- New module mediafile to read/write video/audio files
- New sub-package ffmpeg that contains wrappers for the ffmpeg libraries
  (using ctypes. The ffmpeg libraries themselves are not included, they must
  already be on the system)

Bug fixes/enhancements:

- viewer: Joystick support was partially broken (copy&paste error). Thanks
  to Mariano Sospiro for providing a patch.
- mat3/mat4: The decompose() method doesn't raise a ZeroDivisionError anymore
  when called on a null matrix. Instead, it just returns a scaling part that
  is 0.
- Bugfix (2909382): The world transform didn't properly update in certain
  circumstances. This was because the slot dependency was set between the world
  transforms, but the computation was actually using all the local transforms.

Changes from cgkit-2.0.0alpha8 to cgkit-2.0.0alpha9:

New features:

- New module sloargs to parse compiled RenderMan shaders.
- New module pointcloud to read/write RenderMan point cloud files.
- New module sequence that contains functionality to deal with numbered
  (file) sequences. There are also new utilities seqls.py, seqmv.py, seqcp.py
  and seqrm.py (the equivalent of ls, mv, cp, rm but they work on file
  sequences).

Bug fixes/enhancements:

- ribexport: A custom rib string can now also be added to light sources
  (for the image pass).
- setup script: In addition to the general config file config.cfg the setup
  script also reads a version-specific config_pyXY.cfg script.
- mat4: Wrapped the mat4 constructor that takes 16 floats as input. Because
  this one was missing, calling copy.copy() on a mat4 that was returned by
  the library (instead of being created by the user) did not work.
- RMShader: Passing parameter values for array parameters in the constructor
  didn't work.
- ri/cri: Added the following calls:
      RiArchiveBegin(), RiArchiveEnd(), RiCamera(), RiDisplayChannel(),