@@ -12,6 +12,8 @@ New features:
 
 Bug fixes/enhancements:
 
+- sequence: buildSequences() didn't work properly when assumeFiles was set to
+  True and there was more than one number inside the path. Thanks to Scott Ballard.
 - viewer: Joystick support was partially broken (copy&paste error). Thanks
   to Mariano Sospiro for providing a patch.
 - mat3/mat4: The decompose() method doesn't raise a ZeroDivisionError anymore
